--- a/style.css
+++ b/style.css
@@ -1,1 +1,32 @@
+{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+body{
+    font-family: "Miltonian Tattoo", sans-serif;
+}
+header{
+    background-color: #a79277;
+    color: black;
+    width: 100%;
+    padding: 20px;
+}
 
+.cabeçalho-itens{
+    max-width: 1980;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.cabeçalho-imagem{
+    width: 10%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.titulo_site{
+    padding: 50px;
+    text-align: ;
+}
