--- a/style.css
+++ b/style.css
@@ -37,39 +37,39 @@
     width: 25%;
     padding-right: 30px;
     }
-    .bann{
+    .banner.hospial{
     display: flex;
     justify-content: center;
     }
-    .estudante_titulo{
+    .medicos_titulo{
     padding: 50px;
     text-align: center;
     
     }
-    .estudante-nome{
+    .medicos-nome{
     text-align: center;
     }
-    .estudante-imagem{
+    .medicos-imagem{
     width: 120px;
     }
-    .estudante-icone{
+    .medicos-icone{
     width: 38px;
     padding: 4px 8px;
     }
-    .estudante{
+    .medico{
     background-image: background-color(#faae43);
     padding: 24px 0;
     }
     
-    .estudante.div{
+    .medicos-div{
     text-align: center;
     padding: 24px 0;
     }
-    .estudantes_todos{
+    .medicos_todos{
     display: flex;
     justify-content: space-around;
     }
-    .escola{
+    .hospital{
     background-image: linear-gradient(#40A2E3,#7FC2EF);
     color: white;
     display: flex;
@@ -78,11 +78,11 @@
     text-align:center;
     display:block;
     }
-    .escola-titulo{
+    .hospital-titulo{
     padding: 50px;
     text-align: center;
     }
-    .logo_rodape{
+    .logo_hoapital{
     height: 80px;
     padding: 12px 0;
     
