--- a/style.css
+++ b/style.css
@@ -3,15 +3,18 @@
     padding: 0;
     box-sizing: border-box;
     }
+
     body{
     font-family: "Miltonian Tattoo", sans-serif;
     }
+
     header{
     background-color: #A79277;
     color: black;
     width: 100%;
     padding: 20px;
     }
+
     .cabecalho-itens{
     max-width: 1980px;
     margin: 0 auto;
@@ -19,43 +22,52 @@
     align-items: center;
     justify-content: center;
     }
+
     .cabecalho-imagem{
     width: 10%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     }
+
     .titulo_site{
     padding: 50px;
     text-align: center;
     width: 50%;
     font: 30px;
     }
+
     .sociais{
     display: flex;
     justify-content: flex-end;
     width: 25%;
     padding-right: 30px;
     }
+
     .banner.hospial{
     display: flex;
     justify-content: center;
     }
+
     .medicos_titulo{
     padding: 50px;
     text-align: center;
     
     }
+
     .medicos-nome{
     text-align: center;
     }
+
     .medicos-imagem{
     width: 120px;
     }
+
     .medicos-icone{
     width: 38px;
     padding: 4px 8px;
     }
+
     .medico{
     background-image: background-color(#faae43);
     padding: 24px 0;
@@ -65,10 +77,12 @@
     text-align: center;
     padding: 24px 0;
     }
+
     .medicos_todos{
     display: flex;
     justify-content: space-around;
     }
+
     .hospital{
     background-image: linear-gradient(#40A2E3,#7FC2EF);
     color: white;
@@ -78,16 +92,18 @@
     text-align:center;
     display:block;
     }
+
     .hospital-titulo{
     padding: 50px;
     text-align: center;
     }
+
     .logo_hoapital{
     height: 80px;
     padding: 12px 0;
-    
+    justify-content: flex-start;
     }
     
     .link{
-    color: #ffffff;
+    color: #EAD8C0;
     text-decoration: none;
