--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     }
 
     body{
-    font-family: "Miltonian Tattoo", sans-serif;
+    font-family: "miltonian tattoo", sans-serif;
     }
 
     header{
@@ -85,7 +85,7 @@
 
     .hospital{
     background-image: linear-gradient(#40A2E3,#7FC2EF);
-    color: white;
+    color: #EAD8C0;
     display: flex;
     justify-content:center;
     padding: 24px 0;
@@ -98,12 +98,12 @@
     text-align: center;
     }
 
-    .logo_hoapital{
+    .logo_hospital_rodape{
     height: 80px;
     padding: 12px 0;
     justify-content: flex-start;
     }
     
     .link{
-    color: #EAD8C0;
-    text-decoration: none;
+    color: #ffffff;
+    text-decoration: none;}
