--- a/style.css
+++ b/style.css
@@ -3,18 +3,15 @@
     padding: 0;
     box-sizing: border-box;
     }
-
     body{
-    font-family: "miltonian tattoo", sans-serif;
+    font-family: "Poppins", sans-serif;
     }
-
     header{
-    background-color: #A79277;
-    color: black;
+    background-color: #424e61;
+    color: white;
     width: 100%;
     padding: 20px;
     }
-
     .cabecalho-itens{
     max-width: 1980px;
     margin: 0 auto;
@@ -22,88 +19,76 @@
     align-items: center;
     justify-content: center;
     }
-
     .cabecalho-imagem{
     width: 10%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     }
-
     .titulo_site{
     padding: 50px;
     text-align: center;
     width: 50%;
     font: 30px;
     }
-
     .sociais{
     display: flex;
     justify-content: flex-end;
     width: 25%;
     padding-right: 30px;
     }
-
-    .banner.hospial{
+    .banner1{
     display: flex;
     justify-content: center;
     }
-
-    .medicos_titulo{
+    .medico_titulo{
     padding: 50px;
     text-align: center;
     
     }
-
-    .medicos-nome{
+    .estudante-nome{
     text-align: center;
     }
-
-    .medicos-imagem{
+    .estudante-imagem{
     width: 120px;
     }
-
-    .medicos-icone{
+    .estudante-icone{
     width: 38px;
     padding: 4px 8px;
     }
-
     .medico{
     background-image: background-color(#faae43);
     padding: 24px 0;
     }
     
-    .medicos_{
+    .estudante.div{
     text-align: center;
     padding: 24px 0;
     }
-
-    .medicos_todos{
+    .medico_todos{
     display: flex;
     justify-content: space-around;
     }
-
-    .hospital{
-    background-image: linear-gradient(#ffffff);
-    color: #EAD8C0;
+    .escola{
+    background-image: linear-gradient(#40A2E3,#7FC2EF);
+    color: white;
     display: flex;
     justify-content:center;
     padding: 24px 0;
     text-align:center;
     display:block;
     }
-
-    .hospital-info{
+    .escola-titulo{
     padding: 50px;
     text-align: center;
     }
-
     .logo_rodape{
     height: 80px;
     padding: 12px 0;
-    justify-content: flex-start;
+    
     }
     
     .link{
     color: #ffffff;
-    text-decoration: none;}
+    text-decoration: none;
+    }
